--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surprise !</title>
+    <title>my first project</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -44,8 +44,8 @@
 </head>
 <body>
     <div id="container">
-        <button id="surprise-button">Briti a Safae txofi akbar W9 flwojod?.. cliquer hna!</button>
-        <img id="surprise-image" src="image_1.jpg" height="500px" width="500px" alt="Surprise !">
+        <button id="surprise-button">Coding</button>
+        <img id="project-image" src="https://img.freepik.com/free-photo/computer-program-coding-screen_53876-138060.jpg" height="500px" width="500px" alt="Surprise !">
     </div>
 
     <script>
